# clingy

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  cli.py  config.py  manager.py  pyproject.toml
.Claude/: current-plan.md
.claude/: current-plan.md  konfig-migration-plan.md  serverless-migration-plan.md
.github/workflows/: lint.yml  release.yml  tests.yml
clingy/: cli.py  cli_builder.py  config.py
clingy/commands/: __init__.py  base.py  init.py
clingy/core/: __init__.py  colors.py  discovery.py  emojis.py  logger.py  menu.py
clingy/templates/basic/: .clingy  README.md  config.py
clingy/templates/konfig/: README.md  __init__.py  config.py
clingy/templates/serverless/: .clingy  README.md  config.py
commands/: __init__.py  base.py  build.py  calculator.py  clean.py  deploy.py  dev.py  files.py  greet.py  info.py  insights.py  invoke.py  list_functions.py  list_items.py  logs.py  remove.py  requirements.py  zip.py
core/: colors.py  logger.py  menu.py  stats.py
docs/: GITHUB-ACTIONS-GUIDE.md  README-STYLING-GUIDE.md  architecture.md  commands.md
manager/: cli.py  config.py
manager/commands/: base.py  calculator.py  files.py  greet.py  info.py  list_items.py  requirements.py
manager/core/: dependency.py  logger.py  menu.py
manager_core/: cli.py  cli_builder.py  config.py
manager_core/commands/: __init__.py  base.py  init.py
manager_core/core/: __init__.py  discovery.py  emojis.py  logger.py  menu.py
manager_core/templates/basic/: config.py
manager_core/templates/konfig/: README.md  TESTING.md  __init__.py  (+2 more)
tests/: README.md  conftest.py  test_command_discovery.py  test_discovery.py  test_init_command.py
(+67 files in other folders)
