[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manager"
version = "1.0.0"
description = "Interactive CLI manager template with fuzzy search menus"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Nicolás Casatti", email = "ncasatti@gmail.com"}
]
keywords = ["cli", "manager", "interactive", "fzf", "template"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Utilities",
]

# No dependencies (only Python stdlib)
dependencies = []

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "pytest>=7.0.0",
]

[project.scripts]
manager = "manager.cli:main"

[project.urls]
Homepage = "https://github.com/ncasatti/manager"
Repository = "https://github.com/ncasatti/manager"
Issues = "https://github.com/ncasatti/manager/issues"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.setuptools.packages.find]
where = ["."]
include = ["manager*"]
exclude = ["tests*", "docs*"]
